--- a/index.html
+++ b/index.html
@@ -19,4 +19,5 @@
     </div>
     <script async src="https://www.instagram.com/embed.js"></script>
 </body>
+<script src="./API.js"></script>
 </html>
